--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             </button>
             <div id="dropdown-monitoring" class="hidden mt-1 ml-2 space-y-1">
               <a
-                href="#"
+                href="/overall-success.html"
                 class="flex items-center gap-2 px-3 py-1 text-sm text-gray-600 rounded hover:bg-gray-100"
               >
                 <i class="fa-solid fa-chart-line"></i>
