--- a/transactions.html
+++ b/transactions.html
@@ -201,7 +201,7 @@
           <a
             href="#"
             title="Logout"
-            class="flex items-center gap-2 px-3 py-2 mt-4 text-gray-700 text-red-500 transition rounded sidebar-item hover:bg-gray-100 hover:bg-red-100"
+            class="flex items-center gap-2 px-3 py-2 mt-4 text-red-500 transition rounded sidebar-item hover:bg-red-100"
           >
             <i class="fa-solid fa-right-from-bracket"></i>
             <span class="sidebar-label">Logout</span>
@@ -244,7 +244,10 @@
           </button>
         </header>
 
-        <main class="flex-1 overflow-y-auto bg-gray-50"></main>
+        <main class="flex-1 overflow-y-auto bg-gray-50">
+
+          
+        </main>
 
         <!-- Footer -->
         <footer class="bg-white border-t border-gray-200 footer">
