--- a/abandoned-by-customer.html
+++ b/abandoned-by-customer.html
@@ -5,18 +5,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./tailwind.config.js" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
         integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="path/to/line-awesome/css/line-awesome-font-awesome.min.css" />
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/main.css" />
-    <title>Settings Page</title>
+    <script src="https://code.highcharts.com/highcharts.js"></script>
+    <script src="https://code.highcharts.com/highcharts-3d.js"></script>
+    <title>Abandoned By Customers</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body class="h-screen overflow-hidden font-sans">
-
     <div class="flex h-screen overflow-hidden">
         <!-- Overlay for Mobile -->
         <div id="overlay" class="fixed inset-0 z-20 hidden bg-black bg-opacity-50" onclick="closeMobileMenu()"></div>
@@ -43,10 +44,10 @@
                 </a>
                 <div class="relative">
                     <button onclick="toggleDropdown('monitoring')" title="Service Monitoring"
-                        class="flex items-center justify-between w-full gap-2 px-3 py-2 text-gray-700 transition rounded sidebar-item hover:bg-gray-100">
+                        class="flex items-center justify-between w-full gap-2 px-3 py-2 font-semibold text-gray-700 transition rounded sidebar-item active hover:bg-gray-100">
                         <span class="flex items-center gap-2">
-                            <i class="fa-regular fa-file"></i>
-                            <span class="sidebar-label">Service Monitoring</span>
+                            <i class="fa-regular fa-file text-[#2563EB]"></i>
+                            <span class="sidebar-label text-[#2563EB]">Service Monitoring</span>
                         </span>
                         <svg id="dropdownIcon-monitoring" xmlns="http://www.w3.org/2000/svg"
                             class="w-4 h-4 transition-transform transform" viewBox="0 0 20 20" fill="currentColor">
@@ -57,9 +58,9 @@
                     </button>
                     <div id="dropdown-monitoring" class="hidden mt-1 ml-2 space-y-1">
                         <a href="/overall-success.html"
-                            class="flex items-center gap-2 px-3 py-1 text-sm text-gray-600 rounded hover:bg-gray-100">
-                            <i class="fa-solid fa-chart-line"></i>
-                            <span> Overall Success </span>
+                            class="flex items-center gap-2 px-3 py-1 text-sm text-gray-600 rounded sidebar-item active hover:bg-gray-100">
+                            <i class="fa-solid fa-chart-line  ont-semibold text-[#2563EB]"></i>
+                            <span class="ont-semibold text-[#2563EB]"> Overall Success </span>
                         </a>
                         <a href="#"
                             class="flex items-center gap-2 px-3 py-1 text-sm text-gray-600 rounded hover:bg-gray-100"><i
@@ -121,12 +122,12 @@
                     <span class="sidebar-label">Transactions</span>
                 </a>
                 <a href="/settings.html" title="Settings"
-                    class="flex items-center gap-2 px-3 py-2 font-semibold text-gray-700 transition rounded sidebar-item active hover:bg-gray-100">
-                    <i class="fa-solid fa-gear text-[#2563EB]"></i>
-                    <span class="sidebar-label text-[#2563EB]">Settings</span>
+                    class="flex items-center gap-2 px-3 py-2 text-gray-700 transition rounded hover:bg-gray-100">
+                    <i class="fa-solid fa-gear "></i>
+                    <span class="sidebar-label">Settings</span>
                 </a>
                 <a href="#" title="Logout"
-                    class="flex items-center gap-2 px-3 py-2 mt-4 text-gray-700 text-red-500 transition rounded sidebar-item hover:bg-gray-100 hover:bg-red-100">
+                    class="flex items-center gap-2 px-3 py-2 mt-4 text-red-500 transition rounded sidebar-item hover:bg-red-100">
                     <i class="fa-solid fa-right-from-bracket"></i>
                     <span class="sidebar-label">Logout</span>
                 </a>
@@ -151,75 +152,52 @@
                 </button>
             </header>
 
-            <main class="flex-1 overflow-y-auto bg-gray-50 ">
-                <div class="p-6 font-sans bg-gray-50">
-                    <div class="mb-6">
-                        <h1 class="text-2xl font-bold text-gray-800">Settings</h1>
-                        <p class="text-gray-500">Manage your application settings</p>
+            <main class="flex-1 p-6 overflow-y-auto font-sans bg-gray-50">
+
+                <div class="max-w-screen-xl mx-auto">
+                    <div class="flex items-center justify-between mb-6">
+                        <div>
+                            <h1 class="text-2xl font-bold text-gray-900">Abandoned by Customer</h1>
+                            <p class="text-sm text-gray-600">Analysis of customer abandonment rates at different stages
+                            </p>
+                        </div>
+                        <div class="flex items-center gap-2">
+                            <span class="text-sm font-medium text-gray-700">Define Time Period:</span>
+                            <input type="date" class="px-3 py-1 text-sm border rounded" />
+                            <span class="text-gray-500">To</span>
+                            <input type="date" class="px-3 py-1 text-sm border rounded" />
+                        </div>
                     </div>
-
-                    <div class="p-6 bg-white rounded-lg shadow">
-                        <div class="space-y-6">
-                            <div class="pb-4 border-b">
-                                <h2 class="mb-2 text-lg font-medium">General Settings</h2>
-                                <p class="text-sm text-gray-500">Configure basic application settings</p>
+                    <div class="flex justify-between gap-6 p-6 bg-white shadow main-div rounded-2xl">
+                        <!-- KPI Cards -->
+                        <div class="flex flex-col gap-6 left-cards text-fonts max-w-[400px] w-full min-w-[400px]">
+                            <div
+                                class="bg-white rounded-xl shadow flex justify-normal items-center  hover:scale-100 transition-transform flex-1 min-h-[350px]">
+                                <div id="bar-containersd" class="w-full"></div>
                             </div>
+                        </div>
 
-                            <div class="grid grid-cols-1 gap-6 md:grid-cols-2">
-                                <!-- User Interface Section -->
-                                <div>
-                                    <h3 class="mb-3 font-medium text-md">User Interface</h3>
-                                    <div class="space-y-4">
-                                        <div class="flex items-center justify-between">
-                                            <span class="text-gray-700">Language</span>
-                                            <select class="px-3 py-2 bg-white border rounded">
-                                                <option>English</option>
-                                                <option>Greek</option>
-                                                <option>Spanish</option>
-                                            </select>
-                                        </div>
-                                        <div class="flex items-center justify-between">
-                                            <span class="text-gray-700">Theme</span>
-                                            <select class="px-3 py-2 bg-white border rounded">
-                                                <option>Light</option>
-                                                <option>Dark</option>
-                                                <option>System</option>
-                                            </select>
-                                        </div>
-                                    </div>
+                        <!-- Chart Card -->
+                        <div class="relative w-full flex-1 min-w-[400px] ">
+                            <div id="pie-cards"
+                                class="w-[700px] h-[500px] mx-auto p-6  hover:scale-[1.02] transition-transform flex-1 min-h-[550px] overflow-hidden">
+                                <div
+                                    class="absolute inset-0 rounded-3xl bg-[length:40px_40px] bg-grid animate-[gridMove_20s_linear_infinite]">
                                 </div>
-
-                                <!-- Notifications Section -->
-                                <div>
-                                    <h3 class="mb-3 font-medium text-md">Notifications</h3>
-                                    <div class="space-y-4">
-                                        <div class="flex items-center justify-between mt-2">
-                                            <span class="mt-2 text-gray-700">Email Alerts</span>
-                                            <label class="relative inline-flex items-center cursor-pointer">
-                                                <input type="checkbox" class="sr-only peer" />
-                                                <div
-                                                    class="w-11 h-6 bg-gray-200 rounded-full peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-blue-300 peer peer-checked:bg-blue-600 after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all peer-checked:after:translate-x-full peer-checked:after:border-white">
-                                                </div>
-                                            </label>
-                                        </div>
-                                        <div class="flex items-center justify-between">
-                                            <span class="mt-3 text-gray-700">System Notifications</span>
-                                            <label class="relative inline-flex items-center cursor-pointer">
-                                                <input type="checkbox" class="sr-only peer" checked />
-                                                <div
-                                                    class="w-11 h-6 bg-gray-200 rounded-full peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-blue-300 peer peer-checked:bg-blue-600 after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all peer-checked:after:translate-x-full peer-checked:after:border-white">
-                                                </div>
-                                            </label>
-                                        </div>
-                                    </div>
+                                <div
+                                    class="absolute w-20 h-20 rounded-full top-1/6 right-1/10 bg-gradient-to-br from-[#00d4ff33] to-[#006eff1a] blur-[20px] animate-[float_6s_ease-in-out_infinite]">
                                 </div>
-                            </div>
-
-                            <div class="pt-4 border-t">
-                                <button
-                                    class="px-4 py-2 text-white transition-colors bg-blue-600 rounded hover:bg-blue-700">
-                                    Save Settings
-                                </button>
+                                <div
+                                    class="absolute w-15 h-15 rounded-full bottom-1/5 left-1/5 bg-gradient-to-br from-[#ff006e33] to-[#8338ec1a] blur-[15px] animate-[float_8s_ease-in-out_infinite_reverse]">
+                                </div>
+                                <div
+                                    class="absolute inset-0 bg-white/5 backdrop-blur-[30px] rounded-3xl border border-white/5">
+                                </div>
+                                <div id="pie-containersd"
+                                    class="relative z-10 flex items-center justify-center w-full h-full"></div>
+                                <div
+                                    class="absolute z-20 grid grid-cols-2 gap-4 transform -translate-x-1/2 bottom-6 left-1/2">
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -242,6 +220,85 @@
             </footer>
         </div>
     </div>
+
+    <script>
+        const barData = [
+            { stage: 'Upload Documents', Stoiximan_OB1: 2023, Stoiximan_OB2: 208, Stoiximan_OB3: 0 },
+            { stage: 'Upload ID', Stoiximan_OB1: 3688, Stoiximan_OB2: 17, Stoiximan_OB3: 0 },
+            { stage: 'Register', Stoiximan_OB1: 15, Stoiximan_OB2: 1, Stoiximan_OB3: 0 },
+            { stage: 'Info Page', Stoiximan_OB1: 1624, Stoiximan_OB2: 16, Stoiximan_OB3: 52 }
+        ];
+        const futuristicGradients = [
+            { stops: [['0', '#00d4ff'], ['0.5', '#006eff'], ['1', '#0047ff']] },
+            { stops: [['0', '#ff006e'], ['0.5', '#8338ec'], ['1', '#3a86ff']] },
+            { stops: [['0', '#06ffa5'], ['0.5', '#00d4aa'], ['1', '#0056b3']] },
+            { stops: [['0', '#ffbe0b'], ['0.5', '#fb8500'], ['1', '#ff006e']] }
+        ];
+        const pieData = [
+            { name: 'Not Started', value: 465, grad: futuristicGradients[0] },
+            { name: 'Abandoned by Customer', value: 7644, grad: futuristicGradients[1] },
+            { name: 'Verification Failure', value: 5667, grad: futuristicGradients[2] },
+            { name: 'Verification Success', value: 15441, grad: futuristicGradients[3] }
+        ];
+        const total = pieData.reduce((s, d) => s + d.value, 0);
+        Highcharts.chart('bar-containersd', {
+            chart: { type: 'bar', options3d: { enabled: true, alpha: 10, beta: 15, depth: 50 }, backgroundColor: 'transparent', height: 400 },
+            xAxis: { categories: barData.map(d => d.stage), labels: { style: { fontSize: '16px' } }, lineWidth: 0, tickLength: 0, gridLineWidth: 0 },
+            yAxis: { min: 0, labels: { style: { fontSize: '14px' } }, lineWidth: 0, tickLength: 0, gridLineWidth: 0 },
+            plotOptions: {
+                series: {
+                    depth: 40, dataLabels: {
+                        enabled: true, inside: true, style: { fontSize: '14px', fontWeight: 'bold', color: '#333' },
+                        formatter() { return Highcharts.numberFormat(this.y, 0, '.', '.') }
+                    }
+                }
+            },
+            legend: { align: 'center', verticalAlign: 'bottom', layout: 'horizontal', itemStyle: { fontSize: '14px' } },
+            series: [
+                { name: 'Stoiximan_OB1', data: barData.map(d => d.Stoiximan_OB1), color: '#B0B0B0', borderRadius: 5 },
+                { name: 'Stoiximan_OB2', data: barData.map(d => d.Stoiximan_OB2), color: '#888888', borderRadius: 5 },
+                { name: 'Stoiximan_OB3', data: barData.map(d => d.Stoiximan_OB3), color: '#222222', borderRadius: 5 }
+            ],
+            title: { text: '' }, credits: { enabled: false }
+        });
+        Highcharts.chart('pie-containersd', {
+            chart: { type: 'pie', options3d: { enabled: true, alpha: 35, depth: 45 }, backgroundColor: 'transparent', height: 380 },
+            plotOptions: {
+                pie: {
+                    allowPointSelect: true, cursor: 'pointer', depth: 45, innerSize: '55%',
+                    borderRadius: 25, borderColor: 'rgba(255,255,255,0.1)', borderWidth: 1,
+                    slicedOffset: 12, dataLabels: {
+                        enabled: true, format: '{point.percentage:.0f}%',
+                        connectorWidth: 0,         
+                        connectorColor: 'transparent',
+                        distance: -30,               
+                        style: { fontSize: '12px', fontWeight: '900', color: '#111', textOutline: 'none' }
+                    },
+                    connectorWidth: 0,
+                    animation: { duration: 2500 }
+
+                }
+            },
+            tooltip: {
+                useHTML: true, backgroundColor: 'white', borderRadius: 20, borderWidth: 0,
+                style: { fontSize: '13px', fontWeight: '600' },
+                formatter() {
+                    return `<div style="padding:20px;text-align:center"><div style="font-size:15px;font-weight:900;color:#111;margin-bottom:10px;">${this.point.name}</div><div>Value: <strong>${this.y.toLocaleString()}</strong></div><div>Share: <strong>${this.percentage.toFixed(1)}%</strong></div></div>`;
+                }
+            },
+            title: {
+                useHTML: true, verticalAlign: 'middle', floating: true, y: 0,
+                text: `<div class="text-center"><div style="font-size:48px;font-weight:900;color:#111;animation:pulse 2s infinite">${total}</div><div style="font-size:11px;color:#222;font-weight:700;letter-spacing:4px;margin-top:8px;animation:fadeIn 3s ease-in">TOTAL DATA POINTS</div></div>`
+            },
+            series: [{
+                name: 'Data',
+                data: pieData.map(d => ({ name: d.name, y: d.value, color: { linearGradient: { x1: 0, y1: 0, x2: 1, y2: 1 }, stops: d.grad.stops }, sliced: true })),
+                animation: { duration: 2500 }
+            }],
+            credits: { enabled: false },
+            legend: { enabled: false }
+        });
+    </script>
     <script src="https://kit.fontawesome.com/ce278ed6db.js" crossorigin="anonymous"></script>
     <script src="/assets/js/main.js"></script>
 </body>
