--- a/testing.html
+++ b/testing.html
@@ -1,248 +1,162 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Transactions Dashboard</title>
-    <script src="https://code.highcharts.com/highcharts.js"></script>
-    <script src="https://code.highcharts.com/highcharts-3d.js"></script>
-    <link
-      href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
-      rel="stylesheet"
-    />
-    <style>
-      .metric-value {
-        font-size: 1.5rem;
-        font-weight: bold;
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Abandoned by Customer</title>
+  <script src="https://code.highcharts.com/highcharts.js"></script>
+  <script src="https://code.highcharts.com/highcharts-3d.js"></script>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    @keyframes float {
+
+      0%,
+      100% {
+        transform: translateY(0) rotate(0);
       }
-      .metric-label {
-        font-size: 0.875rem;
-        color: #6b7280;
+
+      50% {
+        transform: translateY(-20px) rotate(180deg);
       }
-      .metric-change-positive {
-        color: #16a34a;
+    }
+
+    @keyframes pulse {
+
+      0%,
+      100% {
+        opacity: 1;
+        transform: scale(1);
       }
-      .metric-change-negative {
-        color: #dc2626;
+
+      50% {
+        opacity: 0.7;
+        transform: scale(1.1);
       }
-    </style>
-  </head>
-  <body class="bg-gray-100">
-    <div class="p-6">
+    }
+
+    @keyframes gridMove {
+      0% {
+        transform: translate(0, 0);
+      }
+
+      100% {
+        transform: translate(40px, 40px);
+      }
+    }
+
+    @keyframes fadeIn {
+      0% {
+        opacity: 0;
+        transform: translateY(10px);
+      }
+
+      100% {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+  </style>
+</head>
+
+<body class="p-6 font-sans bg-gray-100">
+  <section class="mx-auto max-w-7xl">
+    <h1 class="mb-4 text-3xl font-bold">Abandoned by Customer</h1>
+    <p class="mb-8 text-gray-700">Analysis of customer abandonment rates at different stages</p>
+    <div class="flex flex-col gap-6 md:flex-row">
       <div
-        class="flex flex-col md:flex-row justify-between items-start md:items-center mb-6 gap-4"
-      >
-        <div>
-          <h1 class="text-2xl font-bold text-gray-800">Transactions</h1>
-          <p class="text-gray-500">Monitoring and analysis of transactions</p>
-        </div>
-        <div class="bg-white px-4 py-2 rounded shadow text-gray-700">
-          Time Filter
-        </div>
+        class="bg-white rounded-xl p-6 shadow hover:shadow-lg hover:scale-105 transition-transform flex-1 min-h-[350px]">
+        <div id="bar-container" class="w-full h-[350px]"></div>
       </div>
-
-      <div class="flex border-b border-gray-200 mb-6">
-        <button
-          class="tab-button px-4 py-2 font-semibold text-gray-700 border-b-2 border-blue-500"
-        >
-          Success Rate
-        </button>
-        <button
-          class="tab-button px-4 py-2 font-semibold text-gray-700 border-b-2 border-transparent"
-        >
-          Transactions Monitoring
-        </button>
-      </div>
-
-      <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-6">
-        <div
-          class="p-5 border-l-4 border-blue-500 bg-white shadow rounded min-h-[140px] flex flex-col"
-        >
-          <h3 class="text-gray-500 text-sm font-medium">
-            Average Response Time per Transaction
-          </h3>
-          <div class="mt-2 flex items-baseline gap-2">
-            <div class="metric-value">186 sec</div>
-          </div>
-          <p class="metric-label mt-1">vs 360 sec</p>
-          <div class="bg-gray-50 mt-4 p-3 flex justify-between items-center">
-            <span class="text-xs text-gray-500">Current</span>
-            <div class="bg-blue-200 h-2 w-3/4 rounded-full overflow-hidden">
-              <div class="bg-blue-500 h-full" style="width: 52%"></div>
-            </div>
-            <span class="text-xs text-gray-500">Target</span>
-          </div>
-        </div>
-
-        <div
-          class="p-5 border-l-4 border-yellow-500 bg-white shadow rounded min-h-[140px] flex flex-col"
-        >
-          <h3 class="text-gray-500 text-sm font-medium">
-            % Response Time vs SLA
-          </h3>
-          <div class="mt-2 flex items-baseline gap-2">
-            <div class="metric-value">55%</div>
-          </div>
-          <p class="metric-label mt-1">vs 85%</p>
-          <div class="bg-gray-50 mt-4 p-3 flex justify-between items-center">
-            <span class="text-xs text-gray-500">Current</span>
-            <div class="bg-yellow-200 h-2 w-3/4 rounded-full overflow-hidden">
-              <div class="bg-yellow-500 h-full" style="width: 55%"></div>
-            </div>
-            <span class="text-xs text-gray-500">Target</span>
-          </div>
-        </div>
-      </div>
-
-      <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
-        <div
-          class="bg-white rounded-xl p-6 shadow flex items-center justify-center min-h-[350px]"
-        >
-          <div id="chart-response-time" class="w-full h-[320px]"></div>
+      <div id="pie-card"
+        class="relative bg-white rounded-3xl p-6 shadow hover:scale-[1.02] transition-transform flex-1 min-h-[350px] max-w-lg overflow-hidden">
+        <div class="absolute inset-0 rounded-3xl bg-[length:40px_40px] bg-grid animate-[gridMove_20s_linear_infinite]">
         </div>
         <div
-          class="bg-white rounded-xl p-6 shadow flex items-center justify-center min-h-[350px]"
-        >
-          <div id="chart-document-types" class="w-full h-[320px]"></div>
+          class="absolute w-20 h-20 rounded-full top-1/6 right-1/10 bg-gradient-to-br from-[#00d4ff33] to-[#006eff1a] blur-[20px] animate-[float_6s_ease-in-out_infinite]">
         </div>
+        <div
+          class="absolute w-15 h-15 rounded-full bottom-1/5 left-1/5 bg-gradient-to-br from-[#ff006e33] to-[#8338ec1a] blur-[15px] animate-[float_8s_ease-in-out_infinite_reverse]">
+        </div>
+        <div class="absolute inset-0 bg-white/5 backdrop-blur-[30px] rounded-3xl border border-white/5"></div>
+        <div id="pie-container" class="relative z-10 flex items-center justify-center w-full h-full"></div>
+        <div class="absolute z-20 grid grid-cols-2 gap-4 transform -translate-x-1/2 bottom-6 left-1/2"></div>
       </div>
     </div>
+  </section>
+  <script>
+    const barData = [
+      { stage: 'Upload Documents', Stoiximan_OB1: 2023, Stoiximan_OB2: 208, Stoiximan_OB3: 0 },
+      { stage: 'Upload ID', Stoiximan_OB1: 3688, Stoiximan_OB2: 17, Stoiximan_OB3: 0 },
+      { stage: 'Register', Stoiximan_OB1: 15, Stoiximan_OB2: 1, Stoiximan_OB3: 0 },
+      { stage: 'Info Page', Stoiximan_OB1: 1624, Stoiximan_OB2: 16, Stoiximan_OB3: 52 }
+    ];
+    const futuristicGradients = [
+      { stops: [['0', '#00d4ff'], ['0.5', '#006eff'], ['1', '#0047ff']] },
+      { stops: [['0', '#ff006e'], ['0.5', '#8338ec'], ['1', '#3a86ff']] },
+      { stops: [['0', '#06ffa5'], ['0.5', '#00d4aa'], ['1', '#0056b3']] },
+      { stops: [['0', '#ffbe0b'], ['0.5', '#fb8500'], ['1', '#ff006e']] }
+    ];
+    const pieData = [
+      { name: 'Not Started', value: 465, grad: futuristicGradients[0] },
+      { name: 'Abandoned by Customer', value: 7644, grad: futuristicGradients[1] },
+      { name: 'Verification Failure', value: 5667, grad: futuristicGradients[2] },
+      { name: 'Verification Success', value: 15441, grad: futuristicGradients[3] }
+    ];
+    const total = pieData.reduce((s, d) => s + d.value, 0);
+    Highcharts.chart('bar-container', {
+      chart: { type: 'bar', options3d: { enabled: true, alpha: 10, beta: 15, depth: 50 }, backgroundColor: 'transparent', height: 400 },
+      xAxis: { categories: barData.map(d => d.stage), labels: { style: { fontSize: '16px' } }, lineWidth: 0, tickLength: 0, gridLineWidth: 0 },
+      yAxis: { min: 0, labels: { style: { fontSize: '14px' } }, lineWidth: 0, tickLength: 0, gridLineWidth: 0 },
+      plotOptions: {
+        series: {
+          depth: 40, dataLabels: {
+            enabled: true, inside: true, style: { fontSize: '14px', fontWeight: 'bold', color: '#333' },
+            formatter() { return Highcharts.numberFormat(this.y, 0, '.', '.') }
+          }
+        }
+      },
+      legend: { align: 'center', verticalAlign: 'bottom', layout: 'horizontal', itemStyle: { fontSize: '14px' } },
+      series: [
+        { name: 'Stoiximan_OB1', data: barData.map(d => d.Stoiximan_OB1), color: '#B0B0B0', borderRadius: 5 },
+        { name: 'Stoiximan_OB2', data: barData.map(d => d.Stoiximan_OB2), color: '#888888', borderRadius: 5 },
+        { name: 'Stoiximan_OB3', data: barData.map(d => d.Stoiximan_OB3), color: '#222222', borderRadius: 5 }
+      ],
+      title: { text: '' }, credits: { enabled: false }
+    });
+    Highcharts.chart('pie-container', {
+      chart: { type: 'pie', options3d: { enabled: true, alpha: 35, depth: 45 }, backgroundColor: 'transparent', height: 380 },
+      plotOptions: {
+        pie: {
+          allowPointSelect: true, cursor: 'pointer', depth: 45, innerSize: '55%',
+          borderRadius: 25, borderColor: 'rgba(255,255,255,0.1)', borderWidth: 1,
+          slicedOffset: 12, dataLabels: {
+            enabled: true, format: '{point.percentage:.0f}%',
+            style: { fontSize: '12px', fontWeight: '900', color: '#111', textOutline: 'none' }
+          },
+          animation: { duration: 2500 }
+        }
+      },
+      tooltip: {
+        useHTML: true, backgroundColor: 'white', borderRadius: 20, borderWidth: 0,
+        style: { fontSize: '13px', fontWeight: '600' },
+        formatter() {
+          return `<div style="padding:20px;text-align:center"><div style="font-size:15px;font-weight:900;color:#111;margin-bottom:10px;">${this.point.name}</div><div>Value: <strong>${this.y.toLocaleString()}</strong></div><div>Share: <strong>${this.percentage.toFixed(1)}%</strong></div></div>`;
+        }
+      },
+      title: {
+        useHTML: true, verticalAlign: 'middle', floating: true, y: 0,
+        text: `<div class="text-center"><div style="font-size:48px;font-weight:900;color:#111;animation:pulse 2s infinite">${total}</div><div style="font-size:11px;color:#222;font-weight:700;letter-spacing:4px;margin-top:8px;animation:fadeIn 3s ease-in">TOTAL DATA POINTS</div></div>`
+      },
+      series: [{
+        name: 'Data',
+        data: pieData.map(d => ({ name: d.name, y: d.value, color: { linearGradient: { x1: 0, y1: 0, x2: 1, y2: 1 }, stops: d.grad.stops }, sliced: true })),
+        animation: { duration: 2500 }
+      }],
+      credits: { enabled: false },
+      legend: { enabled: false }
+    });
+  </script>
+</body>
 
-    <script>
-      Highcharts.chart("chart-response-time", {
-        chart: {
-          type: "bar",
-          options3d: {
-            enabled: true,
-            alpha: 15,
-            beta: 15,
-            depth: 50,
-            viewDistance: 25,
-          },
-          backgroundColor: "transparent",
-          height: 320,
-        },
-        title: {
-          text: "Response Time Distribution",
-          align: "left",
-          style: { fontSize: "18px", fontWeight: "bold" },
-        },
-        xAxis: {
-          categories: [
-            "Between 0 And 5 Minutes",
-            "Between 5 And 6 Minutes",
-            "Between 6 And 7 Minutes",
-            "Between 7 And 10 Minutes",
-            "More than 10 Minutes",
-          ],
-          labels: { style: { fontSize: "15px", color: "#64748b" } },
-          gridLineWidth: 1,
-          gridLineColor: "#e5e7eb",
-        },
-        yAxis: {
-          min: 0,
-          max: 100,
-          title: { text: null },
-          labels: { style: { fontSize: "14px", color: "#64748b" } },
-          gridLineWidth: 1,
-          gridLineColor: "#e5e7eb",
-        },
-        legend: { enabled: false },
-        plotOptions: {
-          bar: {
-            depth: 40,
-            groupZPadding: 10,
-            grouping: false,
-            dataLabels: {
-              enabled: true,
-              format: "{point.y:.2f}",
-              style: { color: "#222", fontWeight: "bold", fontSize: "15px" },
-              align: "right",
-              inside: false,
-            },
-          },
-        },
-        tooltip: { pointFormat: "<b>{point.y:.2f}%</b>" },
-        series: [
-          {
-            name: "value",
-            data: [
-              { y: 84.47, color: "#2196F3" },
-              { y: 7.23, color: "#4CAF50" },
-              { y: 3.25, color: "#FF9800" },
-              { y: 3.55, color: "#FF9800" },
-              { y: 1.5, color: "#F44336" },
-            ],
-          },
-        ],
-      });
-
-      Highcharts.chart("chart-document-types", {
-        chart: {
-          type: "bar",
-          options3d: {
-            enabled: true,
-            alpha: 15,
-            beta: 15,
-            depth: 50,
-            viewDistance: 25,
-          },
-          backgroundColor: "transparent",
-          height: 320,
-        },
-        title: {
-          text: "Document Types",
-          align: "left",
-          style: { fontSize: "18px", fontWeight: "bold" },
-        },
-        xAxis: {
-          categories: [
-            "Tax Document",
-            "Passport",
-            "Police ID",
-            "Student ID",
-            "Military ID",
-          ],
-          labels: { style: { fontSize: "15px", color: "#64748b" } },
-          gridLineWidth: 1,
-          gridLineColor: "#e5e7eb",
-        },
-        yAxis: {
-          min: 0,
-          title: { text: null },
-          labels: { style: { fontSize: "14px", color: "#64748b" } },
-          gridLineWidth: 1,
-          gridLineColor: "#e5e7eb",
-        },
-        legend: { enabled: false },
-        plotOptions: {
-          bar: {
-            depth: 40,
-            groupZPadding: 10,
-            grouping: false,
-            dataLabels: {
-              enabled: true,
-              format: "{point.y:.0f}",
-              style: { color: "#222", fontWeight: "bold", fontSize: "15px" },
-              align: "right",
-              inside: false,
-            },
-          },
-        },
-        tooltip: { pointFormat: "<b>{point.y:.0f}</b>" },
-        series: [
-          {
-            name: "value",
-            data: [
-              { y: 3134, color: "#2196F3" },
-              { y: 3434, color: "#4CAF50" },
-              { y: 23946, color: "#FF9800" },
-              { y: 39, color: "#9E9E9E" },
-              { y: 243, color: "#F44336" },
-            ],
-          },
-        ],
-      });
-    </script>
-  </body>
 </html>
